# wsnotify

./: Cargo.toml  build.rs
resource/: icons.res
src/: main.rs  ten_minutes.rs
